# fast_api

./: pyproject.toml
